alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
   text-align: center;
   background-color: lightgray;
-  margin-right: -38px;
 }
 
 .App-logo {
